--- a/seminarski.bib
+++ b/seminarski.bib
@@ -1,19 +1,18 @@
-
 @article{quipper_language,
-	author = {Alexander S. Green, Peter LeFanu Lumsdaine, Neil J. Ross, Peter Selinger, Benoît Valiron},
+	author = {Alexander S. Green and Peter LeFanu Lumsdaine and Neil J. Ross and Peter Selinger and BenoÃ®t Valiron},
 	title = {Quipper: A Scalable Quantum Programming Language},
 	year = {2013}
 	}
 	
 @article{quipper_programming_intro,
-	author = {Alexander S. Green, Peter LeFanu Lumsdaine, Neil J. Ross, Peter Selinger, Benoît Valiron},
+	author = {Alexander S. Green and Peter LeFanu Lumsdaine and Neil J. Ross and Peter Selinger and BenoÃ®t Valiron},
 	title = {An Introduction to Quantum Programming in Quipper},
-	keywords {Programming Languages (cs.PL); Emerging Technologies (cs.ET); Quantum Physics (quant-ph)},
+	keywords = {Programming Languages (cs.PL); Emerging Technologies (cs.ET); Quantum Physics (quant-ph)},
 	year = {2013}
 	}
 	
 @article{quipper_algorithms,
-author = {Safat Siddiqui, Mohammed Jahirul Islam, Omar Shehab},
+author = {Safat Siddiqui and Mohammed Jahirul Islam and Omar Shehab},
 tile = {Five Quantum Algorithms Using Quipper},
 year = {2014}
 }
@@ -24,4 +23,10 @@ author = {E. Knill},
 year = {1996}
 }
 
-
+@book{knjiga,    
+    author = {Nielsen, Michael A. and Chuang, Isaac L.},
+    isbn = {0521635039},
+    publisher = {Cambridge University Press},
+    title = {{Quantum Computation and Quantum Information}},
+    year = {2002}
+}
