--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -151,15 +151,34 @@ zadržavajući dodelu vrednosti promenljivoj. Glavna struktura podataka u Lisp-u
 \label{sec:lambdacalc}
 
 
-\subsection{QFC and QPL}
+\subsection{QFC i QPL}
 \label{sec:qfc_qml}
 
-QFC, QPL
+QFC ( \emph{eng}. Quantum Flow Charts) i QPL ( \emph{eng}. Quantum Programming Language) su dva blisko povezana jezika čiji je tvorac Peter Selinger.  Pristup programiranju u njima se može sumirati na sledeci način: "kvantni podaci, klasična kontrola". Postoje dva načina sintaksnog predstavljanja kvantnih programa: grafička reprezentacija, u vidu grafikona protoka, i tekstualna. Izbor između te dve sintakse je pitanje ukusa, jer su međusobno ekvivalentne. Dva osnovna načina manipulacije qubit- ovima: unitarne transformacije i merenja. Klasični kontroler komunicira sa kvantnim uređajem šaljući mu niz instrukcija koje kvantni računar zatim izvršava. 
 
-\subsection{QML}
-\label{sec:qml}
+\subsubsection{Čista i pomešana stanja}
+Spoljni posmatrač može imati nekompletno znanje o stanju sistema. Na primer, pretpostavimo da znamo da dati sistem može biti u stanju ~\emph{u} i stanju ~\emph{v} sa jednakim verovatnoćama. Koristimo sledeću notaciju da to zabeležimo: \( \frac{1}{2} \){~\emph{u}}+\( \frac{1}{2} \){~\emph{v}}. U opštem slučaju, pišemo $\lambda_1${$u_1$}+$\ldots$+$\lambda_m${$u_m$} da opišemo sistem koji je za nekog posmatrača u stanju $u_i$, sa verovatnoćom $\lambda_i$, gde je zbir svih verovatnoća jednak 1. Takva distribucija verovatnoća naziva se \textit{pomešano stanje}. Svaki posmatrač može imati svoje pomešano stanje, dok se stvarno stanje kvantnog sistema nalazi u (moguće nepoznatom) \textit{čistom stanju}.
 
-QML
+Program se predstavlja u obliku grafikona protoka odn. dijagrama kontrole protoka. Komande deluju tako što ulaz transformišu u izlaz. Zarad jednostavnosti razmatramo samo jedan tip podataka: qbit.
+
+Ako nije drugačije naglašeno, tok podataka se odvija od vrha prema dnu. Svaka grana je označena qbitovima koji su dostupni u tom delu programa dok se u čvorovima odvijaju operacije nad njima. Unitarne transformacije mogu da deluju na jedan ili više qbitova; npr. pišemo \textit{q*=S} za operaciju primene neke kvantne logičke kapije na qbit q. Dakle, notacija je analogna notaciji \textit{b:=1} u klasičnom računarstvu. Operacija merenja je granajuća jer može imati dva moguća izlaza.
+\includegraphics{qFlow}
+Verovatno najbolje objašnjenje pruža razmotranje jednostavnog primera na slici: program prima dva qbita- \textit{p} i \textit{q}, meri p i onda primenjuje logičku kapiju Not na jedan od qbitova u zavisnosti od merenje \textit{p}. Na kraju, na izlazu vraća modifikovane qbitove p i q.
+
+Primetimo da ako su ulazni qbitovi u čistom stanju, oni će to stanje zadržati posle svake unitarne transformacije i operacije merenja. Trenutak kada se to stanje menja je prilikom spajanja dve grane na dijagramu, tako da na izlazu (u ovom slučaju) dobijamo qbitove u pomešanom stanju. Ali i sam ulaz u program mogu biti qbitovi u pomešanom stanju u kom slučaju se logičke kapije primenjuju na matrice gustine koje predstavljaju pomešana stanja. Dok se čisto stanje može predstaviti u obliku matrice sa jednom kolonom, matrica gustine jednog kubita je dimenzije 2$\times$2. Npr., za qbit \textit{u}=$\frac{1}{\sqrt{2}}\ket{0}$-\textit{u}=$\frac{1}{\sqrt{2}}\ket{0}$ 
+matrica gustine je \[\textit{uu*}= \left( \begin{array}{cc}
+\frac{1}{2} & \frac{-1}{2} \\
+\frac{-1}{2} & \frac{1}{2} \\
+\end{array} \right)\].
+Postoje još neka pravila kao što su: "new" koje alocira novu promenljivu i njenu vrednost postavlja na 0, "discard" koje dealocira promenljivu, "initial" koje označava početak novog (nedostupnog) toka kontrole i "permute" koje permutuje promenljive u trenutnom kontekstu promenljivih.
+
+QFC podržava petlje (nastaju dodavanjem linije toka kontrole od jedne tačke do druge), procedure (nalik funkcijama u \emph{C}-u imaju ime, tip, ulazne argumente i povratnu vrednost) i rekurziju.
+
+\subsubsection{Implementacioni detalji}
+
+Iako kvantni hardver trenutno ne postoji, korisno je obratiti pažnju na nekoliko hipotetičkih detalja eventualnog hardverskog rešenja. Operativni sistem bi trebao da pamti listu qbitova koje koristi svaki od procesa. Kada proces zatraži novi qbit, operativni sistem nalazi slobodan qbit koji mu dodeljuje. Naravno, operativni sistem mora da vodi računa o tome da proces ne može da pristupi qbitu koji mu nije dodeljen, što veoma liči na upravljanje memorijom na klasičnim računarima. Kada proces završi rad sa nekim qbitom obaveštava o tome operativni sistem koji dati qbit označava kao slobodan.
+
+Po \textit{svojstvu nekloniranja} nije moguće duplicirati kvantni bit. U ovom jeziku, koji je statično tipiziran, ta teorema je ispoštovana u samoj sintaksi, što predstavlja napredak u odnosu na ranije formalizme koji nisu imali to svojstvo, što bi kasnije dovelo do grešaka u radu (npr. prilikom primene unitarne transformacije na više kopija istog qbita).
 
 \subsection{Quipper}
 \label{sec:quipper}
