--- a/seminarski.bib
+++ b/seminarski.bib
@@ -30,3 +30,21 @@ year = {1996}
     title = {{Quantum Computation and Quantum Information}},
     year = {2002}
 }
+
+@article{qfc,
+address = {New York, NY, USA},
+author = {Selinger, Peter},
+issn = {0960-1295},
+journal = {Mathematical. Structures in Comp. Sci.},
+keywords = {computing, language, quantum, survey},
+month = aug,
+number = {4},
+pages = {527--586},
+posted-at = {2015-03-15 14:16:51},
+priority = {2},
+publisher = {Cambridge University Press},
+title = {{Towards a Quantum Programming Language}},
+url = {http://dx.doi.org/10.1017/s0960129504004256},
+volume = {14},
+year = {2004}
+}
