--- a/odg.tex
+++ b/odg.tex
@@ -200,11 +200,15 @@ Rad govori o kvantnom programiranju, dajući koristan uvod u kvantno računarstv
 % Напишете један кратак пасус у којим ћете својим речима препричати суштину рада (и тиме показати да сте рад пажљиво прочитали и разумели). Обим од 200 до 400 карактера.
 
 \section{Krupne primedbe i sugestije}
-Jedina velika zamerka jeste nenavođenje referenci u celom radu, nego samo na nekim mestima. 
+Jedina velika zamerka jeste nenavođenje referenci u celom radu, nego samo na nekim mestima. \\
+\odgovor { Ipak, uvažili ovu sugestiju i dodali reference na značajnijim mestima.}
+
 % Напишете своја запажања и конструктивне идеје шта у раду недостаје и шта би требало да се промени-измени-дода-одузме да би рад био квалитетнији.
 
 \section{Sitne primedbe}
-U radu postoji nekoliko malih gramatičkih  i štamparskih grešaka, a na više mesta i nepotrebne podele na pasuse. Takođe, bilo bi dobro prilagoditi terminologiju čitaocima i podneblju, kao što je slučaj sa terminima "nus-pojava" (bočni efekat) i "kjubit" (kubit).
+U radu postoji nekoliko malih gramatičkih  i štamparskih grešaka, a na više mesta i nepotrebne podele na pasuse. Takođe, bilo bi dobro prilagoditi terminologiju čitaocima i podneblju, kao što je slučaj sa terminima "nus-pojava" (bočni efekat) i "kjubit" (kubit).\\
+\odgovor {Podela na pasuse je izmenjena; koliko znamo, termin nuspojava je reč srpskog jezika, tako da ne bi trebalo biti problema sa razumevanjem te reči. Ali smo kasnije saznali da je njen pravilan zapis bez crtice, tako da smo to izmenili. Što se tiče termina 'kjubit', postoji mogućnost da se ona navodi onako kako se piše na engleskom jeziku (za šta, po nama, nema nikakve potrebe, pošto je rad pisan na srpskom) ili da se piše onako kako se čita (što je rešenje koje smo mi odabrali).}
+
 % Напишете своја запажања на тему штампарских-стилских-језичких грешки
 
 
@@ -219,23 +223,31 @@ Nije propušteno ništa važno.
 \item Da li ima suštinskih grešaka i propusta?\\
 U radu nema suštinskih grešaka.
 \item Da li je naslov rada dobro izabran?\\
-Naslov rada nije dobro izabran jer je to naslov teme, a i pored toga nije prikladan.
+Naslov rada nije dobro izabran jer je to naslov teme, a i pored toga nije prikladan.\\
+\odgovor {Izmenili smo naslov rada.} 
 \item Da li sažetak sadrži prave podatke o radu?\\
-Da, sažetak sadrži prave podatke o radu, mada bi mogao biti obimniji.
+Da, sažetak sadrži prave podatke o radu, mada bi mogao biti obimniji.\\
+\odgovor {Mišljenja smo da nema potrebe da sažetak bude detaljniji. }
 \item Da li je rad lak-težak za čitanje?\\
 Rad nije težak za čitanje.
 \item Da li je za razumevanje teksta potrebno predznanje i u kolikoj meri?\\
-Za rad je potrebno osnovno informatičko i solidno matematičko znanje.
+Za rad je potrebno osnovno informatičko i solidno matematičko znanje.\\
+\odgovor {Kao što smo već pomenuli, trudili smo se da rad napišemo što jednostavnije, ali nismo hteli da zbog toga žrtvujemo tačnost podataka. Takođe, nismo sigurni na šta konkretno recenzent referira kad kaže da je potrebno solidno matematičko predznanje.}
 \item Da li je u radu navedena odgovarajuća literatura?\\
-U radu jeste navedena odgovarajuća literatura, ali ne u neophodnom obimu.
+U radu jeste navedena odgovarajuća literatura, ali ne u neophodnom obimu.\\
+\odgovor {Već smo dali odgovar na ovu kritiku u ranijoj recenziji, ali smo je delom i uvažili, te smo literaturu u nekoj meri proširili.}
 \item Da li su u radu reference korektno navedene?\\
-Neophodno je bolje navođenje referenci u radu, naročito zbog toga što nekim segmentima nedostaju reference.
+Neophodno je bolje navođenje referenci u radu, naročito zbog toga što nekim segmentima nedostaju reference.\\
+\odgovor {Reference su dodate na još nekoliko značajnih mesta u radu.}
+
 \item Da li je struktura rada adekvatna?\\
 Možda bi bilo bolje da se deo obuhvaćen Uvodom podeli u zasebne celine, inače je struktura adekvatna.
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
-Rad ne sadrži tabele, ali sadrži slike, a broj strana je veći za jednu.
+Rad ne sadrži tabele, ali sadrži slike, a broj strana je veći za jednu.\\
+\odgovor {Dodali smo tabelu, a što se tiče obima, naša je prvobitna ideja bila da ovo bude čisto teorijski rad, jer je vrlo teško napisati nešto smisleno na datu temu u obimu koji bi bio manji od našeg.}
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
-Slika jeste adekvatna, a rad ne sadrži tabele.
+Slika jeste adekvatna, a rad ne sadrži tabele.\\
+\odgovor {Dodali smo tabelu.}
 \end{enumerate}
 
 \section{Ocenite sebe}
@@ -251,7 +263,7 @@ Slika jeste adekvatna, a rad ne sadrži tabele.
 U oblast kvantnog programiranja sam dobro upućen, imajući u vidu da sam je istraživao nedavno, ali u oblast funkcionalnog kvantnog programiranja sam slabije upućen.
 
 
-\chapter{Četvrti recenzent \odgovor{--- ocena:} }
+\chapter{Četvrti recenzent \odgovor{--- ocena: 5 } }%primedbe su krajnje konkretne u i većini slučajeva odgovarajuće 
 
 \section{O čemu rad govori?}
 % Напишете један кратак пасус у којим ћете својим речима препричати суштину рада (и тиме показати да сте рад пажљиво прочитали и разумели). Обим од 200 до 400 карактера.
@@ -259,30 +271,31 @@ U početnim poglavljima autori objašnjavaju šta je kvantno računarstvo kao i 
 
 \section{Krupne primedbe i sugestije}
 % Напишете своја запажања и конструктивне идеје шта у раду недостаје и шта би требало да се промени-измени-дода-одузме да би рад био квалитетнији.
-Zaključak priča o budućim revizijama. Taj deo bi trebalo da se izbaci, nema potrebe za pisanjem šta treba da se uradi. 
-
+Zaključak priča o budućim revizijama. Taj deo bi trebalo da se izbaci, nema potrebe za pisanjem šta treba da se uradi. \\
+\odgovor {Slažemo se sa sugestijom, tako da smo taj deo izbacili iz zaključka.}
 
 \section{Sitne primedbe}
 % Напишете своја запажања на тему штампарских-стилских-језичких грешки
 \begin{enumerate}
 \item Na 4. strani ceo prvi pasus treba da se sredi.
 Rečenica ``Neki od opisanih funkcionalnih jezika (Quipper, ?)...`` treba da se zamini odgovarajućom.
-Uvođenje novog pojma QRAM nema zatvorenu zagradu.
+Uvođenje novog pojma QRAM nema zatvorenu zagradu.\\
+\odgovor {Slažemo se, uneli smo pomenute izmene.}
 
 \item Na više mesta postoje greške u slovima, npr. umesto slova ``đ`` piše ``dj``.
-
+\odgovor {Kritika je tačna, pomenute greške smo ispravili.}
 \item U poglavlju 1.3 ostavljeno je mesto za referencu ali referanca nije ubačena.
-
+\odgovor {Kritika je tačna, referenca je ubačena.}
 \item Poglavlje 2 nema tekst, odmah se kreće sa poglavljem 2.1.
 
 \item U poglavlju 2.1 postoji referenca za koju ne postoji tekst??
-
-\item Na strani 6 postoji u tekstu referenca na sliku no ona nije uvezana.
-
+%ovde je dodavanje reference valjda dovoljno da reši problem. Mislio sam da je već bila tamo ... 
+\item Na strani 6 postoji u tekstu referenca na sliku no ona nije uvezana.\\
+\odgovor {Pošto je navedena jedna slika u celom radu, nismo videli potrebu da preciziramo koja je slika u pitanju, ali ipak smo uvažili i ovu sugestiju.}
 \item Na strani 6 u blizini formule rečenica kreće sa ``Npr., ...``. Mislim da je lepše napisati to ``Na primer, ...``. U istoj rečenici tačku treba staviti pored formule ili je ne stavljati uopšte. Mislim da ne treba da krene novi red sa tačkom.
-
+\odgovor {Prva sugestija je stvar ukusa, ali smo je ipak uvažili. A što se tiče tačke, potpuno se slažemo, to je detalj koji nam je promakao.}
 \item Na strani 6, zbog korišćenja znakova \" za navodnike, umesto ``discard`` dobijena je reč điscard. Koristiti iskošene jednostruke navodnike (pored tastera za 1) za navodnike.
-
+\odgovor {Još jedan detalj koji nam je promakao, potpuno se slažemo, promena je izvršena.}
 \end{enumerate}
 
 \section{Provera sadržajnosti i forme seminarskog rada}
@@ -299,7 +312,8 @@ Nije ništa važno propušteno
 Nema. 
 
 \item Da li je naslov rada dobro izabran?\\
-Naslov rada je naziv teme. Ako autori nisu mogli da smisle kreativniji naslov mogli su barem broj ``2`` da izbace. 
+Naslov rada je naziv teme. Ako autori nisu mogli da smisle kreativniji naslov mogli su barem broj ``2`` da izbace. \\
+\odgovor {Nismo ni znali da naslov teme ne treba biti naslov rada. U svakom slučaju, promenili smo naslov rada.}
 
 \item Da li sažetak sadrži prave podatke o radu?\\
 Da. Sažetak sadrži tačno opisuje ono o čemu autori govore u radu.
@@ -321,6 +335,7 @@ Struktura rada je adekvatna.
 
 \item Da li rad sadrži sve elemente propisane uslovom seminarskog rada (slike, tabele, broj strana...)?\\
 Rad ne sadrži nikakve tabele.
+\odgovor {Ovo su svi recenzenti uočili i ispravili smo taj nedostatak.}
 
 \item Da li su slike i tabele funkcionalne i adekvatne?\\
 Slika je na pravmom mestu, lepo opisuje ono što je napisano u tekstu
