--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -3,6 +3,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage{color}
+\usepackage{float}
 \usepackage{url}
 \usepackage{listings}
 \usepackage[T2A]{fontenc} % enable Cyrillic fonts
@@ -152,13 +153,16 @@ zadržavajući dodelu vrednosti promenljivoj. Glavna struktura podataka u Lisp-u
 
 QFC ( \emph{eng}. Quantum Flow Charts) i QPL ( \emph{eng}. Quantum Programming Language) su dva blisko povezana jezika čiji je tvorac Peter Selinger.  Pristup programiranju u njima se može sumirati na sledeci način: "kvantni podaci, klasična kontrola". Postoje dva načina sintaksnog predstavljanja kvantnih programa: grafička reprezentacija, u vidu grafikona protoka, i tekstualna. Izbor između te dve sintakse je pitanje ukusa, jer su međusobno ekvivalentne. Dva osnovna načina manipulacije qubit- ovima: unitarne transformacije i merenja. Klasični kontroler komunicira sa kvantnim uređajem šaljući mu niz instrukcija koje kvantni računar zatim izvršava. 
 
-\subsubsection{Čista i pomešana stanja}
 Spoljni posmatrač može imati nekompletno znanje o stanju sistema. Na primer, pretpostavimo da znamo da dati sistem može biti u stanju ~\emph{u} i stanju ~\emph{v} sa jednakim verovatnoćama. Koristimo sledeću notaciju da to zabeležimo: \( \frac{1}{2} \){~\emph{u}}+\( \frac{1}{2} \){~\emph{v}}. U opštem slučaju, pišemo $\lambda_1${$u_1$}+$\ldots$+$\lambda_m${$u_m$} da opišemo sistem koji je za nekog posmatrača u stanju $u_i$, sa verovatnoćom $\lambda_i$, gde je zbir svih verovatnoća jednak 1. Takva distribucija verovatnoća naziva se \textit{pomešano stanje}. Svaki posmatrač može imati svoje pomešano stanje, dok se stvarno stanje kvantnog sistema nalazi u (moguće nepoznatom) \textit{čistom stanju}.
 
 Program se predstavlja u obliku grafikona protoka odn. dijagrama kontrole protoka. Komande deluju tako što ulaz transformišu u izlaz. Zarad jednostavnosti razmatramo samo jedan tip podataka: qbit.
 
 Ako nije drugačije naglašeno, tok podataka se odvija od vrha prema dnu. Svaka grana je označena qbitovima koji su dostupni u tom delu programa dok se u čvorovima odvijaju operacije nad njima. Unitarne transformacije mogu da deluju na jedan ili više qbitova; npr. pišemo \textit{q*=S} za operaciju primene neke kvantne logičke kapije na qbit q. Dakle, notacija je analogna notaciji \textit{b:=1} u klasičnom računarstvu. Operacija merenja je granajuća jer može imati dva moguća izlaza.
-%\includegraphics{qFlow}
+\begin{figure}[H]
+\caption{Primer jednostavnog programa napisanog u QFC}
+\centering
+\includegraphics{qFlow}
+\end{figure}
 Verovatno najbolje objašnjenje pruža razmotranje jednostavnog primera na slici 1: program prima dva qbita- \textit{p} i \textit{q}, meri p i onda primenjuje logičku kapiju Not na jedan od qbitova u zavisnosti od merenje \textit{p}. Na kraju, na izlazu vraća modifikovane qbitove p i q.
 
 Primetimo da ako su ulazni qbitovi u čistom stanju, oni će to stanje zadržati posle svake unitarne transformacije i operacije merenja. Trenutak kada se to stanje menja je prilikom spajanja dve grane na dijagramu, tako da na izlazu (u ovom slučaju) dobijamo qbitove u pomešanom stanju. Ali i sam ulaz u program mogu biti qbitovi u pomešanom stanju u kom slučaju se logičke kapije primenjuju na matrice gustine koje predstavljaju pomešana stanja. Dok se čisto stanje može predstaviti u obliku matrice sa jednom kolonom, matrica gustine jednog kubita je dimenzije 2$\times$2. Npr., za qbit \textit{u}=$\frac{1}{\sqrt{2}}\ket{0}$ - $\frac{1}{\sqrt{2}}\ket{0}$ 
@@ -166,7 +170,7 @@ matrica gustine je \[\textit{uu*}= \left( \begin{array}{cc}
 \frac{1}{2} & \frac{-1}{2} \\
 \frac{-1}{2} & \frac{1}{2} \\
 \end{array} \right).\]
-Postoje još neka pravila kao što su: 'new' koje alocira novu promenljivu i njenu vrednost postavlja na 0, 'discard' koje dealocira promenljivu, 'initial' koje označava početak novog (nedostupnog) toka kontrole i 'permute' koje permutuje promenljive u trenutnom kontekstu promenljivih.
+Postoje još neka pravila kao što su: ''new'' koje alocira novu promenljivu i njenu vrednost postavlja na 0, 'discard' koje dealocira promenljivu, 'initial' koje označava početak novog (nedostupnog) toka kontrole i 'permute' koje permutuje promenljive u trenutnom kontekstu promenljivih.
 
 QFC podržava petlje (nastaju dodavanjem linije toka kontrole od jedne tačke do druge), procedure (nalik funkcijama u \emph{C}-u imaju ime, tip, ulazne argumente i povratnu vrednost) i rekurziju.
 
@@ -239,10 +243,10 @@ Quipper je realizovan kao ~\em embedded ~\em language u okviru funkcionalnog jez
 U Quipperu, isti opis kvantnog kola se može koristiti za konstrukciju i manipulaciju u memoriji ili za njegovo izvršenje. Na primer, funkcija \begin{verbatim} run_generic \end{verbatim} simulira kolo dok funkcija \begin{verbatim} print_generic \end{verbatim} štampa kolo u nekom od izlaznih formata.
 
 \section{Zaključak}
-
+\label{sec:zakljucak}
  U ovom kratkom radu pokusali smo da sto jednostavnije i sažetije predstavimo sam koncept kvantnog funkcionalnog programiranja i neke jezike koji se time bave, a zbog obima rada, nismo mogli da se pozabavimo još nekim kvantnim funkcionalnim jezicima kao što su Quantum lambda calculi i QML. S obzirom na to da klasični računari koji počivaju na tranzistorima dostižu fizičke granice svog daljnjeg razvitka, kvantni računari u ovom trenutku deluju kao jedan od najvažnijih budućih pravaca razvoja računarstva, uprkos velikim teškoćama na koje taj razvoj nailazi (među najvećima- izolovanost kvantnog računara od spoljnog sveta).
 
-\label{sec:zakljucak}
+
 
 
 
@@ -252,6 +256,6 @@ U Quipperu, isti opis kvantnog kola se može koristiti za konstrukciju i manipul
 \bibliography{seminarski} 
 \bibliographystyle{plain}
 
+TeX source ovog dokumenta dostupan na \url{https://github.com/nsekularac/MSNR}
 
 \end{document}
->>>>>>> Update quippera, sitne prepravke
